# triad

./: .gitignore  AGENTS.md  Cargo.toml  PATTERNS.md  README.md  triad.toml
.triad/: evidence.ndjson
crates/triad-cli/: Cargo.toml
crates/triad-cli/src/: agent_output.rs  cli.rs  dispatch.rs  exit_codes.rs  human_output.rs  main.rs  output.rs  parsing.rs  tests.rs
crates/triad-config/: Cargo.toml
crates/triad-config/src/: lib.rs  tests.rs
crates/triad-core/: Cargo.toml
crates/triad-core/src/: api.rs  error.rs  freshness.rs  ids.rs  lib.rs  model.rs  report.rs  revision.rs  verify.rs
crates/triad-fs/: Cargo.toml
crates/triad-fs/src/: claim_markdown.rs  command_capture.rs  config.rs  evidence_ndjson.rs  init.rs  lib.rs  snapshot.rs
crates/triad-runtime/: Cargo.toml
crates/triad-runtime/src/: claims.rs  drift.rs  fs_support.rs  lib.rs  patching.rs  repo_support.rs  run_exec.rs  run_result.rs  runtime_config.rs  scaffold.rs  storage.rs  tests.rs  verify_exec.rs  verify_plan.rs  work_contract.rs  work_guardrails.rs
crates/triad-runtime/src/agent_runtime/: adapter.rs  backend_probe.rs  claude.rs  codex.rs  gemini.rs  mod.rs  process_runner.rs  session.rs  workspace_stage.rs
docs/: 00-document-map.md  01-product-charter.md  02-domain-model.md  03-spec-format.md  04-workflows.md  05-cli-contract.md  06-api-contract.md  07-storage-model.md  08-runtime-integration.md  09-verification-and-ratchet.md  10-implementation-blueprint.md  11-consistency-report.md  15-release-readiness.md  16-runtime-cli-decomposition-plan.md  16-runtime-cli-decomposition-tasks.md
docs/i18n/en/: README.md
docs/i18n/es/: README.md
docs/i18n/ko/: README.md
docs/i18n/zh/: README.md
i18n/es/: README.md
i18n/ko/: README.md
i18n/zh/: README.md
schemas/: agent.claim.get.schema.json  agent.claim.list.schema.json  agent.claim.next.schema.json  agent.drift.detect.schema.json  agent.patch.apply.schema.json  agent.patch.propose.schema.json  agent.run.schema.json  agent.status.schema.json  agent.verify.schema.json  claim.schema.json  claim_report.schema.json  envelope.schema.json  evidence.schema.json  lint_report.schema.json  triad_config.schema.json
scripts/: verify_artifacts.py
spec/claims/: REQ-auth-001.md  REQ-auth-002.md
