[workspace]
resolver = "3"
members = [
  "crates/triad-core",
  "crates/triad-fs",
  "crates/triad-cli",
]

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/AxiomOrient/triad"

[workspace.metadata.release]
tag = "0.3.1"
binary = "triad"
readme = "README.md"
install_command = "cargo install --path crates/triad-cli"
verify_command = "cargo test --workspace"
artifact_set = [
  "README.md",
  "docs/",
  "schemas/",
  "crates/",
  "scripts/verify_artifacts.py",
]

[workspace.dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
