[package]
name = "triad-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "triad"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
triad-core = { path = "../triad-core" }
triad-fs = { path = "../triad-fs" }
