[package]
name = "triad-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Reference CLI for deterministic claim verification with triad."
readme = "../../README.md"

[[bin]]
name = "triad"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
triad-core = { version = "0.3.2", path = "../triad-core" }
triad-fs = { version = "0.3.2", path = "../triad-fs" }
