[package]
name = "triad-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Pure deterministic claim verification logic for triad."
readme = "../../README.md"

[dependencies]
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
