[package]
name = "triad-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Filesystem adapter for triad claims, config, snapshots, and evidence."
readme = "../../README.md"

[dependencies]
camino.workspace = true
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
triad-core = { version = "0.3.2", path = "../triad-core" }
