[package]
name = "triad-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
triad-config = { path = "../triad-config" }
triad-core = { path = "../triad-core" }
